[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["ben-hill33 <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
black = "^21.5b2"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
